cognito login implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h1>The frontend has just started</h1>
+<!-- <h1>The frontend has just started</h1> -->
+<!-- <app-sign-in></app-sign-in> -->
+<!-- <app-home></app-home> -->
+<router-outlet></router-outlet>
