--- a/src/styles.css
+++ b/src/styles.css
@@ -17,11 +17,12 @@ html, body{
     padding-left: 24px;
     margin-right: auto;
     margin-left: auto;
+    margin-top: 24px;    
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 500px) {
     .container{
-        max-width: 1200px;
+        max-width: 500px;
     }
 }
 
@@ -47,3 +48,56 @@ html, body{
 .align-items-center{
     align-items: center;
 }
+
+.header h4 {
+    margin-top: 10px;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(0,0,0,.4);
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form p{
+    text-align: right;
+}
+
+.form p a{
+    color: #000;
+    font-size: 14px;
+}
+
+.form>input{
+    height: 46px;
+    padding: 0 16px;
+    border: 2px solid #ddd;
+    border-radius: 2px;
+    outline: 0;
+    margin-top: 20px;
+}
+
+.form>input:focus{
+    border-color: red;
+}
+
+.form button{
+    padding: 12px 10px;
+    border: 0;
+    background-color: red;
+    border-radius: 3px;
+    margin-top: 10px;
+    color: #fff;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.auth-box{
+    background-color: white;
+    padding: 48px 56px;
+    border: 2px solid red;
+    box-shadow: rgba(17, 12, 46, 0.15)0px 48px 100px 0px;
+}
+
