implemented login and logout(uses cognito)

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="navigation">
+    <a class="button">
+        <img src="https://cdn.icon-icons.com/icons2/2518/PNG/512/logout_icon_151219.png">
+        <div class="logout" (click)="signOutWithCognito()">LOGOUT</div>
+
+    </a>
+</div>
+
+<div class="user-content">
+    <h2>Secret Files here</h2>
+</div>
