--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,8 @@ html, body{
     padding-left: 24px;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 24px;    
+    margin-top: 24px; 
+    
 }
 
 @media (min-width: 500px) {
@@ -59,6 +60,7 @@ html, body{
 .form {
     display: flex;
     flex-direction: column;
+    
 }
 
 .form p{
@@ -74,20 +76,20 @@ html, body{
     height: 46px;
     padding: 0 16px;
     border: 2px solid #ddd;
-    border-radius: 2px;
+    border-radius: 4px;
     outline: 0;
     margin-top: 20px;
 }
 
 .form>input:focus{
-    border-color: red;
+    border-color: #e81410;
 }
 
 .form button{
     padding: 12px 10px;
     border: 0;
-    background-color: red;
-    border-radius: 3px;
+    background-color: #e81410;
+    border-radius: 4px;
     margin-top: 10px;
     color: #fff;
     letter-spacing: 1px;
@@ -97,7 +99,10 @@ html, body{
 .auth-box{
     background-color: white;
     padding: 48px 56px;
-    border: 2px solid red;
+    border: 2px solid #e81410;
     box-shadow: rgba(17, 12, 46, 0.15)0px 48px 100px 0px;
 }
 
+.form img{
+    height: 140px;
+}
