--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-<div class="user-content">
-    <h2>Secret Files here</h2>
-</div>
-
+<app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
+<app-content></app-content>
+<!-- <app-side-bar></app-side-bar> -->
