--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" >
+<!-- <nav class="navbar navbar-default" >
     <div class="navbar-header">
             <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" alt="wg-logo" class="wg-logo">
     </div>
@@ -9,13 +9,15 @@
             <li><a href="#" (click)="onSelect('drive-management')">Drive Management</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <button type="button" class="logout" (click)="signOutWithCognito()">LOGOUT</button>
+            <button type="button" class="btn btn-danger container" (click)="signOutWithCognito()">Logout</button>
         </ul>
     </div>
-</nav>
 
-<div class="jumbotron text-center">
+</nav> -->
+
+<!-- <div class="jumbotron text-center">
     <h1>WatchGuard Technologies</h1>
     <p>Hiring Drive Management Tool</p>
-</div>
+</div> -->
 
+<p>Hello dashboard</p>
