implemented panelist panel form with dashboard and drivemangement route

--- a/src/app/components/drive-management/panel-form/panel-form.component.html
+++ b/src/app/components/drive-management/panel-form/panel-form.component.html
@@ -1,6 +1,6 @@
 
  
-<div class="container">
+<div class="container d-inline-flex p-2">
   <div class="row mt-4 mb-2 text-center">
     <div class="col">
       <button type="button" (click)="openFormModal()" class="btn btn-danger" >
