--- a/src/app/components/home/content/side-bar/side-bar.component.html
+++ b/src/app/components/home/content/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="side-bar-content">
+<div class="side-bar-content d-inline-flex p-2">
     <ul class="nav-list">
         <li class="nav-list-item " *ngFor="let item of list">
             <i class="{{item.icon}}"></i>
