--- a/src/app/components/home/content/content.component.html
+++ b/src/app/components/home/content/content.component.html
@@ -1,1 +1,13 @@
 <app-side-bar></app-side-bar>
+<app-right-content></app-right-content>
+
+<!-- <div class="container">
+    <div class="row">
+        <div class="col-xs-6">
+            ONE
+        </div>
+        <div class="col-xs-6">
+            TWO
+        </div>
+    </div>
+</div> -->
