--- a/src/app/components/drive-management/drive-management.component.html
+++ b/src/app/components/drive-management/drive-management.component.html
@@ -3,8 +3,7 @@
 
 
 
-
-<div class="container d-inline-flex p-2">
+<div class="d-inline-flex p-2">
     <div class="row">
         <div class="col-xs-6">
             <app-panel-form></app-panel-form>
