--- a/src/app/components/home/content/side-bar/side-bar.component.html
+++ b/src/app/components/home/content/side-bar/side-bar.component.html
@@ -1,8 +1,8 @@
 <div class="side-bar-content d-inline-flex p-2">
     <ul class="nav-list">
-        <li class="nav-list-item " *ngFor="let item of list">
+        <li class="nav-list-item mask" *ngFor="let item of list">
             <i class="{{item.icon}}"></i>
-            <span class="">
+            <span>
                 <a href="#" class="text-white">{{item.name}} </a>
             </span>
         </li>
