--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -2,9 +2,11 @@
     <div class="side-nav-button p-2 me-3 text-light" (click)="SideNavToggle()">
         <a class="btn btn-dark" data-bs-toggle="offcanvas" href="#" role="button"><i class="button fa fa-bars"></i></a>
     </div>
-    <a class="navbar-brand text-dark px-2" href="#">WatchGuard Technologies</a>
+    
+    <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" alt="wg-logo" class="img-fluid" width="130">
+    
     <div class="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right ">
             <li><a href="/home" (click)="onSelect('dashboard')" class="text-dark">DashBoard</a></li>
             <li ><a href="/drive-management" (click)="onSelect('drive-management')" class="text-dark">Drive Management</a></li>
         </ul>
