--- a/src/app/components/home/content/side-bar/side-bar.component.html
+++ b/src/app/components/home/content/side-bar/side-bar.component.html
@@ -1,9 +1,17 @@
 <div class="side-bar-content d-inline-flex p-2">
-    <ul class="nav-list">
+    <ul class="nav-list" *ngIf="HomeStatus">
+    <!-- <ul class="nav-list"> -->
         <li class="nav-list-item mask" *ngFor="let item of list">
             <i class="{{item.icon}}"></i>
             <span>
                 <a href="#" class="text-white">{{item.name}} </a>
+            </span>
+        </li>
+    </ul>
+    <ul class="nav-list" *ngIf="!HomeStatus" >
+        <li class="nav-list-item mask" *ngFor="let item2 of list2">
+            <span>
+                <a href="#" class="text-white">{{item2.name}} </a>
             </span>
         </li>
     </ul>
