--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<app-header (sideNavToggled)="sideNavStatus = $event;"></app-header>
+<app-header></app-header>
 <app-content></app-content>
 <!-- <app-side-bar></app-side-bar> -->
