--- a/src/app/components/drive-management/drive-management.component.html
+++ b/src/app/components/drive-management/drive-management.component.html
@@ -11,5 +11,8 @@
         <div class="col-xs-6">
             <app-panelist-form></app-panelist-form>
         </div>
+        <div class="col-xs-6">
+            <app-hiring-drive-form></app-hiring-drive-form>
+        </div>
     </div>
 </div>
