--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -31,26 +31,26 @@
                 <input type="text" id="title" name="title" placeholder="Enter Title"><br>
 
                 <div container>
-                  <!-- <input type="checkbox" id="subscribeNews" name="subscribe" value="newsletter"/> -->
-                  <label for="subscribeNews">Hiring Admin</label> 
+                  <label for="HiringAdmin">Hiring Admin</label> 
                   <input type="Checkbox" name="blue" value="yes">Anand
                   <input type="Checkbox" name="red" value="yes">Awanti
                   <input type="Checkbox" name="green" value="yes">Arsh
                 </div>
 
-                <!-- <label for="email"><b>Email:</b></label>
-                <input type="email" placeholder="Enter Email"  name="email" id="email" required><br>
-
-                <label for="fname">Phooe Number:</label>
-                <input type="tel" id="fnum" placeholder="Enter Phone Number"><br>
-
-                
-                <label for="role">Choose Role:</label>
+                <label for="EntityContact">Contact Person</label> 
                 <select id="role" name="role">
-                    <option value="admin">Admin</option>
-                    <option value="panelist">Panelist</option>
-                    <option value="viewer">Viewer</option>
-                </select> -->
+                  <option placeholder="Select Person"></option>
+                  <option value="admin">Amanpreet Singh Dhillon</option>
+                  <option value="panelist">Sukhmanpreet Singh</option>
+                  <option value="viewer">Pradeep Bansal</option>
+                </select>
+
+                <legend class="hiring"><strong>Hiring Details</strong></legend>
+                <label for="selectDate">Select Hiring Date:</label>
+                <input type="date" id="birthday" name="birthday">
+                
+                <label for="round"><b>Hiring Round:</b></label>
+                <input type="text" placeholder="Enter Round"  name="round" id="round" required><br>
 
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Description:</label>
