--- a/src/app/components/common/header/header.component.html
+++ b/src/app/components/common/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg  px-2 d-flex p-2" style="background-color: #ddd;">
-    <div class="side-nav-button p-2 me-3 text-light" (click)="SideNavToggle()">
+<nav class="navbar navbar-expand-lg  px-2 d-flex p-2" >
+    <div class="side-nav-button p-2 me-3 text-light">
         <a class="btn btn-dark" data-bs-toggle="offcanvas" href="#" role="button"><i class="button fa fa-bars"></i></a>
     </div>
     
@@ -7,8 +7,8 @@
     
     <div class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right ">
-            <li><a href="/home" (click)="onSelect('dashboard')" class="text-dark">DashBoard</a></li>
-            <li ><a href="/drive-management" (click)="onSelect('drive-management')" class="text-dark">Drive Management</a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/home" (click)="onSelect('dashboard')" class="text-dark">DashBoard</a></li>
+            <li routerLinkActive="active"[routerLinkActiveOptions]="{exact:true}"><a routerLink="/drive-management" (click)="onSelect('drive-management')" class="text-dark">Drive Management</a></li>
         </ul>
        
     </div>
