--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,13 +1,16 @@
 <div class="container" *ngIf="user">
     <div class="row">
         <div class="auth-box justify-content-center align-items-center" >
+            <div class="container">
+                <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" class="wg-logo">
+            </div>
+            
             <div class="header">
                 <h2>Welcome Back</h2>
                 <h4>Log in to your account using email and password</h4>
             </div>
 
             <div class="form">
-                <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg">
                 <input type="email" name="email" placeholder="Email Address" [(ngModel)]="user.email" autocomplete="off">
                 <input [type]="user.showPassword ? 'text':'password'" placeholder="Password" [(ngModel)]="user.password" >
 
