--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,11 +1,12 @@
 <div class="container" *ngIf="user">
     <div class="row">
         <div class="auth-box justify-content-center align-items-center" >
-            <div class="container">
-                <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" class="wg-logo">
-            </div>
+            <!-- <div class="container">
+                
+            </div> -->
             
-            <div class="header">
+            <div class="header text-center">
+                <img src="https://www.watchguard.com/sites/default/files/images/branding/watchguard-logo_0.svg" class="wg-logo">
                 <h2>Welcome Back</h2>
                 <h4>Log in to your account using email and password</h4>
             </div>
