save button in panelist form debug

--- a/src/app/components/panelist-form/panelist-form.component.html
+++ b/src/app/components/panelist-form/panelist-form.component.html
@@ -52,7 +52,7 @@
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                     Close
                   </button>
-                  <button type="submit" class="btn btn-success" (click)="savePanelist()">
+                  <button type="submit" class="btn btn-success" (click)="savePanelist()" data-bs-dismiss="modal">
                     Save changes
                   </button>
                 </div>
