added hiring-drive service

--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -32,22 +32,22 @@
 
                 <div container>
                   <label for="HiringAdmin">Hiring Admin</label> 
-                  <input type="Checkbox" name="blue" value="yes">Anand
-                  <input type="Checkbox" name="red" value="yes">Awanti
-                  <input type="Checkbox" name="green" value="yes">Arsh
+                  <input type="Checkbox" name="check_admin" value="yes">Anand
+                  <input type="Checkbox" name="check_admin" value="yes">Awanti
+                  <input type="Checkbox" name="check_admin" value="yes">Arsh
                 </div>
 
                 <label for="EntityContact">Contact Person</label> 
-                <select id="role" name="role">
+                <select id="coordinator" name="coordinator">
                   <option placeholder="Select Person"></option>
-                  <option value="admin">Amanpreet Singh Dhillon</option>
-                  <option value="panelist">Sukhmanpreet Singh</option>
-                  <option value="viewer">Pradeep Bansal</option>
+                  <option value="coordinator1">Amanpreet Singh Dhillon</option>
+                  <option value="coordinator2">Sukhmanpreet Singh</option>
+                  <option value="coordinator3">Pradeep Bansal</option>
                 </select>
 
                 <legend class="hiring"><strong>Hiring Details</strong></legend>
                 <label for="selectDate">Select Hiring Date:</label>
-                <input type="date" id="birthday" name="birthday">
+                <input type="date" id="drivedate" name="drivedate">
                 
                 <label for="round"><b>Hiring Round:</b></label>
                 <input type="text" placeholder="Enter Round"  name="round" id="round" required><br>
