--- a/src/app/components/drive-management/drive-management.component.html
+++ b/src/app/components/drive-management/drive-management.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 <app-side-bar></app-side-bar>
+<app-hiring-drive-form></app-hiring-drive-form>
 
 
-
-<div class="d-inline-flex p-2 right-content">
+<!-- <div class="d-inline-flex p-2 right-content">
     <div class="row">
         <div class="col-xs-6">
             <app-panel-form></app-panel-form>
@@ -12,4 +12,4 @@
             <app-hiring-drive-form></app-hiring-drive-form>
         </div>
     </div>
-</div>
+</div> -->
