--- a/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
+++ b/src/app/components/drive-management/hiring-drive-form/hiring-drive-form.component.html
@@ -41,147 +41,26 @@
       </div>
     
       <legend class="hiring"><strong>Hiring Drive Dates</strong></legend>
-      <div class="drive-dates">
-        <select id="role" name="role" >
-          <option placeholder="Select Entity"></option>
-          <option value="admin">Pre-Placement talk</option>
-          <option value="panelist">Interview Round 1</option>
-          <option value="viewer">Interview Round 2</option>
-        </select>
+      <div class="drive-dates" *ngFor="let obj of driveDates; let i = index">
+          <select id="role" class="dates" name="role" name="roundName{{i}}" [(ngModel)]="obj.roundName">
+            <option placeholder="Select Entity"></option>
+            <option value="admin">Pre-Placement talk</option>
+            <option value="panelist">Interview Round 1</option>
+            <option value="viewer">Interview Round 2</option>
+          </select>
         
-        <!-- <label for="selectDate">P</label> -->
-        <input type="date" id="pre-placement" name="date" >
-        <input type="time" id="appt" name="time">
+          
+          <input type="date" id="pre-placement" name="roundDate{{i}}" [(ngModel)]="obj.roundDate">
+
+          <input type="time" id="appt" name="roundTime{{i}}" [(ngModel)]="obj.roundTime">
+
+          <span class="remove btn btn-danger" (click)="removeDates(i)">-</span>
       </div>
-      
-      
+      <div class="container-d-flex">
+        <button class="btn btn-danger me-3" (click)="addDates()">Add Date</button>
+        <button class="btn btn-primary ">Submit</button>   
+        
+      </div>
+
     </form>
   </div>
-  
-  
-
-
-
-<!-- <div class="container d-inline-flex p-2">
-    <div class="row mt-4 mb-2 text-center">
-      <div class="col">
-        <button type="button" (click)="openHirirngDriveFormModal()" class="btn btn-danger" >
-          Add Hirirng Drive
-        </button>
-      </div>
-    </div>
-</div>
-
-<div
-    class="modal dark"
-    id="HiringDriveModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Create Hiring Drive</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="modal-body">
-            <form>
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" placeholder="Enter Title"><br>
-
-                <div container>
-                  <label for="HiringAdmin">Hiring Admin</label> 
-                  <input type="Checkbox" name="blue" value="yes">Anand
-                  <input type="Checkbox" name="red" value="yes">Awanti
-                  <input type="Checkbox" name="green" value="yes">Arsh
-                </div>
-
-                <label for="EntityContact">Contact Person</label> 
-                <select id="role" name="role">
-                  <option placeholder="Select Person"></option>
-                  <option value="admin">Amanpreet Singh Dhillon</option>
-                  <option value="panelist">Sukhmanpreet Singh</option>
-                  <option value="viewer">Pradeep Bansal</option>
-                </select>
-
-                <legend class="hiring"><strong>Hiring Details</strong></legend>
-                <label for="selectDate">Select Hiring Date:</label>
-                <input type="date" id="birthday" name="birthday">
-                
-                <label for="round"><b>Hiring Round:</b></label>
-                <input type="text" placeholder="Enter Round"  name="round" id="round" required><br>
-
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Description:</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                
-            </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-            Close
-          </button>
-          <button type="button" class="btn btn-success" (click)="saveDrive()">
-            Save changes
-          </button>
-        </div>
-      </div>
-    </div>
-</div> -->
-<!-- <body>
-  <div class="container">
-    <div class="row  col-md-offset-3">
-      <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h1>Create Hiring Drive</h1>
-          </div>
-          <div class="panel-body">
-            
-          </div>
-          <div class="panel-footern text-right">
-            This is footer
-          </div>
-      </div>
-    </div>
-  </div>
-</body> -->
-<!-- <div class="container-fluid">
-  <div class="row">
-    <form class="form-inline">
-      
-      
-      <div class="form-group">
-        <label for="exampleInputEmail">Hiring Drive Title</label>
-        <input type="email" class="form-control" id="exampleInputEmail" placeholder="Title">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Description</label>
-        <textarea type="password" class="form-control" id="exampleInputPassword1" placeholder="Description"></textarea>
-      </div>
-
-      
-      <div class="form-group">
-        <label for="exampleInputEmail">Hiring Drive Admin</label>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="option1">
-            Awanti
-          </label>
-        </div>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="option2">
-            Anand
-          </label>
-        </div>
-      </div>
-      
-    </form>
-  </div>
-</div> -->
